--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Promise generator</title>
-    <link rel="stylesheet" href="css/common.css" />
-  </head>
-  <body>
-    <p><a href="index.html">Go back</a></p>
 
-    <form class="form">
-      <label>
-        First delay (ms)
-        <input type="number" name="delay" required />
-      </label>
-      <label>
-        Delay step (ms)
-        <input type="number" name="step" required />
-      </label>
-      <label>
-        Amount
-        <input type="number" name="amount" required />
-      </label>
-      <button type="submit">Create promises</button>
-    </form>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Promise generator</title>
+	<link rel="stylesheet" href="css/common.css" />
+</head>
 
-    <script src="js/03-promises.js" type="module"></script>
-  </body>
+<body>
+	<p><a href="index.html">Go back</a></p>
+
+	<form class="form">
+		<label>
+			First delay (ms)
+			<input type="number" name="delay" required value="150" />
+		</label>
+		<label>
+			Delay step (ms)
+			<input type="number" name="interval" required value="1000" />
+		</label>
+		<label>
+			Amount
+			<input type="number" name="amount" required value="5" />
+		</label>
+		<button type="submit">Create promises</button>
+	</form>
+
+	<script src="js/03-promises.js" type="module"></script>
+</body>
+
 </html>
