--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -14,15 +14,15 @@
 	<form class="form">
 		<label>
 			First delay (ms)
-			<input type="number" name="delay" required value="150" />
+			<input type="number" name="delay" required value="" />
 		</label>
 		<label>
 			Delay step (ms)
-			<input type="number" name="interval" required value="1000" />
+			<input type="number" name="interval" required value="" />
 		</label>
 		<label>
 			Amount
-			<input type="number" name="amount" required value="5" />
+			<input type="number" name="amount" required value="" />
 		</label>
 		<button type="submit">Create promises</button>
 	</form>
